fix(icon-button): resolve vertical alignment issue by removing phantom bottom space

--- a/packages/ui/_icon-button.scss
+++ b/packages/ui/_icon-button.scss
@@ -40,9 +40,13 @@ $icon-btn-sizes: (
             border-radius: map.get($values, radius);
 
             svg,
+            [data-icon],
             .btn__loading-animation {
                 width: map.get($values, icon);
                 height: map.get($values, icon);
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
         }
     }
